<resources>
    <string name="app_name">JolieCafeAdmin</string>
    <string name="revenue">Revenue</string>
    <string name="products">Products</string>
    <string name="voucher">Vouchers</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="revenue_haicham">Revenue: \u0020</string>
    <string name="money">999.999.000 VND</string>
    <string name="best_sellers">Best sellers</string>
    <string name="add_new_product">Add new product</string>
    <string name="products_tab_page">Products tab page</string>
    <string name="item_name">Latte</string>
    <string name="dot_center_vertical">•</string>
    <string name="item_favorite">5</string>
    <string name="product_price">%s VND</string>
    <string name="badge">Badge</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="discount">Discount</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="discount_percent">Discount percent</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="enter_product_discount_percent">Enter product discount percent</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="notifications">Notifications</string>
    <string name="create_new_notification">Create new notification</string>
    <string name="enter_notification_title_here">Enter notification title here</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_content">Notification content</string>
    <string name="enter_notification_content_here">Enter notification content here</string>
    <string name="all">All</string>
    <string name="for_you">For you</string>
    <string name="sold">Sold: %1$d</string>
    <string name="push_notification">Push notification</string>
    <string name="new_voucher">New Voucher</string>
    <string name="code">Code</string>
    <string name="enter_voucher_code">Enter voucher code</string>
    <string name="enter_voucher_description">Enter voucher description</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="condition">Condition</string>
    <string name="condition_hint">Bill cost that can trigger the discount</string>
    <string name="discount_percent_2">Discount percent (%)</string>
    <string name="enter_discount_percent">Enter discount percent</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="add_voucher">Add voucher</string>
    <string name="last_update">Last update: %1$s</string>
    <string name="create_at">Create at: %1$s</string>
    <string name="shipping">Shipping</string>
    <string name="voucher_date">%1$s - %2$s</string>
    <string name="number_with_percent">%1$s%%</string>
    <string name="bills">Bills</string>
    <string name="product_quantity">%1$s items</string>
    <string name="size">Size</string>
    <string name="edit_voucher">Edit voucher</string>
    <string name="delete_voucher">Delete voucher?</string>
    <string name="delete_voucher_alert">Do you really want to delete this voucher?</string>
    <string name="delete">Delete</string>
    <string name="voucher_detail">Voucher detail</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="update_bill_status">Update Bill Status</string>
    <string name="pending">Pending</string>
    <string name="delivering">Delivering</string>
    <string name="received">Received</string>
    <string name="cancelled">Cancelled</string>
    <string name="paid">Paid</string>
</resources>