<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            style="@style/RegularText2"
            android:text="@string/delete_voucher"
            android:textSize="20sp"
            android:textColor="#E7A15C" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_text_color" />

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RegularText2"
            android:text="@string/delete_voucher_alert"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:stateListAnimator="@null"
                android:backgroundTint="@color/grey_opacity60_primary"
                android:textColor="@color/error_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SmallCorneredButton"
                android:text="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center"/>
</FrameLayout>