<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.revenue.RevenueFragment"
    android:paddingTop="@dimen/large_margin"
    android:paddingHorizontal="@dimen/large_margin">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:src="@drawable/image_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        app:shapeAppearanceOverlay="@style/CornerSize50Percent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        android:layout_marginStart="@dimen/small_margin"
        android:text="Hi, Latte!"
        style="@style/RegularText"
        android:textColor="@color/title_text_color"/>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_bell"
        android:backgroundTint="#0000"/>
    
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/grey_primary_variant"
        android:textAlignment="textStart"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TabText"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorColor="@color/grey_primary_variant"
        app:tabTextColor="@color/text_color"
        android:layout_marginTop="@dimen/extra_large_margin">
        
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>
        
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/tv_revenue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        style="@style/RegularText2"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/revenue_haicham"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="@id/tv_revenue_title"
        app:layout_constraintStart_toEndOf="@id/tv_revenue_title"
        style="@style/RegularNumber2"
        android:text="@string/money"
        android:textColor="@color/grey_primary_variant"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:layout_constraintTop_toBottomOf="@id/tv_revenue_title"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/chart_background"/>

    <TextView
        android:id="@+id/tv_best_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chart"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RegularText"
        android:textColor="@color/title_text_color"
        android:text="@string/best_sellers"
        android:layout_marginTop="@dimen/extra_large_margin"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_best_seller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_best_seller"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_best_seller"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingTop="@dimen/medium_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>