<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_revenue">

    <fragment
        android:id="@+id/navigation_revenue"
        android:name="com.nt118.joliecafeadmin.ui.fragments.revenue.RevenueFragment"
        android:label="@string/revenue"
        tools:layout="@layout/fragment_revenue" >
        <action
            android:id="@+id/action_navigation_revenue_to_notificationsFragment"
            app:destination="@id/notificationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.nt118.joliecafeadmin.ui.fragments.products.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_products_to_productDetailActivity"
            app:destination="@id/productDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_vouchers"
        android:name="com.nt118.joliecafeadmin.ui.fragments.vouchers.VouchersFragment"
        android:label="@string/voucher"
        tools:layout="@layout/fragment_vouchers" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nt118.joliecafeadmin.ui.fragments.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <activity
        android:id="@+id/productDetailActivity"
        android:name="com.nt118.joliecafeadmin.ui.activities.product_detail.ProductDetailActivity"
        android:label="activity_product_detail"
        tools:layout="@layout/activity_product_detail" >
        <argument
            android:name="productId"
            app:argType="string" />
        <argument
            android:name="isEdit"
            app:argType="boolean"
            android:defaultValue="false" />
    </activity>
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.nt118.joliecafeadmin.ui.fragments.notifications.NotificationsFragment"
        android:label="fragment_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>